--- a/opcionsi.html
+++ b/opcionsi.html
@@ -40,7 +40,7 @@
 <body>
   <div id="container">
     <h1>¡Espero te haya gustado mi regalo!</h1>
-    <p>Quiero que sepas que eres una persona muy especial para mí y que quiero hacer las cosas bien. 💜</p>
+    <p>Paola, quiero que sepas que eres una persona muy especial para mí y que quiero hacer las cosas bien. 💜</p>
     <img src="img/bar.jpg" alt="Pareja feliz" width="400">
   </div>
 </body>
